--- a/app/templates/worker/inventory.html
+++ b/app/templates/worker/inventory.html
@@ -1,14 +1,20 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h2>Inventory</h2>
-<table>
-    <tr><th>Name</th><th>Quantity</th><th>Expiry Date</th></tr>
-    {% for m in medicines %}
-    <tr>
-        <td>{{ m.name }}</td>
-        <td>{{ m.quantity }}</td>
-        <td>{{ m.expiry_date }}</td>
-    </tr>
-    {% endfor %}
-</table>
+<div class="inventory-container">
+    <h2 class="inventory-title">📦 Inventory</h2>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Quantity</th>
+            <th>Expiry Date</th>
+        </tr>
+        {% for m in medicines %}
+        <tr>
+            <td>{{ m.name }}</td>
+            <td>{{ m.quantity }}</td>
+            <td>{{ m.expiry_date }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+</div>
 {% endblock %}
